Update HTML metadata for improved SEO and branding

--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/planckk.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS - Planckk</title>
+    <title>Planckk - Innovative Digital Solutions</title>
+    <meta name="description" content="Planckk provides innovative digital solutions including website creation, digital transformation, and more. Get your custom website in just 6 hours!" />
+    <meta name="keywords" content="Planckk, digital solutions, website creation, digital transformation, SEO, digital marketing" />
+    <meta name="author" content="Planckk Technologies" />
+    <meta property="og:title" content="Planckk - Innovative Digital Solutions" />
+    <meta property="og:description" content="Planckk provides innovative digital solutions including website creation, digital transformation, and more. Get your custom website in just 6 hours!" />
+    <meta property="og:image" content="/planckk.svg" />
+    <meta property="og:url" content="https://planckk.com" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Planckk - Innovative Digital Solutions" />
+    <meta name="twitter:description" content="Planckk provides innovative digital solutions including website creation, digital transformation, and more. Get your custom website in just 6 hours!" />
+    <meta name="twitter:image" content="/planckk.svg" />
   </head>
   <body>
     <div id="root"></div>
